update swagger file to include training series api
