# controllers/trainingSeries.js
@@ -15,18 +15,22 @@ router
   .route("/")
   .get(async (req, res) => {
     /**
-     * Get all training series associated with an authenticated user.
+     * Get all training series
      * @function
      * @param {Object} req - The Express request object
      * @param {Object} res - The Express response object
      * @returns {Object} - The Express response object
      */
-    // Destructure the authenticated User email off of res.locals
-    const { email } = res.locals.user;
+    let {search} = req.query;
+    let trainingSeries;
+    if(search){
+      trainingSeries = await TrainingSeries.find(search);
+
+    }else{
+      trainingSeries = await TrainingSeries.get();
+
+    }
     // Get all training series from the database that are associated with the authenticated User
-    const trainingSeries = await TrainingSeries.find({
-      "u.email": email
-    });
     // Return the found training series to client
     res.status(200).json({ trainingSeries });
   })
@@ -43,10 +47,10 @@ router
      */
 
     //deconstructure the title and user id from the req body.
-    const { title, user_id } = req.body;
+    const { title, country, user_id } = req.body;
 
     //add the new training series to the database
-    const newTrainingSeries = await TrainingSeries.add({ title, user_id });
+    const newTrainingSeries = await TrainingSeries.add({ title, country, user_id });
 
     //return the newly created training series to the client.
     return res.status(201).json({ newTrainingSeries });
